--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -2,9 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".activity.RoomActivity">
 
     <ImageView
@@ -30,20 +30,21 @@
 
         <ImageView
             android:id="@+id/iv_roomProfile"
-            android:layout_margin="10dp"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:layout_margin="10dp"
             android:background="@drawable/custom_rounded" />
 
         <TextView
             android:id="@+id/tv_roomTitle"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="10dp"
             android:layout_toRightOf="@id/iv_roomProfile"
-            android:textSize="24sp"
-            android:text="Room Title"/>
+            android:text="Room Title"
+            android:textSize="24sp" />
 
         <TextView
             android:id="@+id/tv_roomComment"
@@ -51,16 +52,26 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_roomTitle"
             android:layout_alignLeft="@id/tv_roomTitle"
-            android:text="Room Comment"/>
+            android:layout_marginRight="20dp"
+            android:text="Room Comment"
+            android:textSize="10dp" />
 
 
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/layout_voice"
+
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/layout_swipeRefresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/layout_title"
-        android:layout_margin="10dp"></RelativeLayout>
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_voiceList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/layout_title"
+            android:fadeScrollbars="true"
+            android:overScrollMode="never" />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
