--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,9 +7,9 @@
     android:layout_width="match_parent"
     tools:context=".activity.LoginActivity"
     android:orientation="vertical"
-    android:fillViewport="true">
-    
-    
+    android:fillViewport="true"
+    android:id="@+id/sv_root">
+
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
