--- a/app/src/main/res/layout/fragment_inputroomcode.xml
+++ b/app/src/main/res/layout/fragment_inputroomcode.xml
@@ -17,7 +17,7 @@
         android:layout_marginBottom="10dp"
         android:gravity="center_vertical"
         android:text="초대코드를 입력해 주세요."
-        android:textColor="@color/colorRedPink"
+        android:textColor="@color/colorMain"
         android:textSize="16sp" />
 
     <EditText
@@ -43,7 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@color/colorRedPink"
+            android:background="@color/colorMain"
             android:text="방 입장"
             android:textColor="#000" />
 
