--- a/app/src/main/res/layout/fragment_room_slide_page.xml
+++ b/app/src/main/res/layout/fragment_room_slide_page.xml
@@ -9,7 +9,8 @@
         android:id="@+id/layout_room1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginTop="20dp">
 
         <ImageView
             android:id="@+id/iv_roomProfile1"
@@ -31,7 +32,8 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_toRightOf="@id/layout_room1"
-        android:layout_marginLeft="30dp">
+        android:layout_alignTop="@id/layout_room1"
+        android:layout_marginLeft="50dp">
 
         <ImageView
             android:id="@+id/iv_roomProfile2"
@@ -53,7 +55,8 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_below="@id/layout_room1"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp">
 
         <ImageView
             android:id="@+id/iv_roomProfile3"
@@ -75,9 +78,9 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_toRightOf="@id/layout_room3"
+        android:layout_alignTop="@id/layout_room3"
         android:layout_below="@id/layout_room2"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="10dp">
+        android:layout_marginLeft="50dp">
 
         <ImageView
             android:id="@+id/iv_roomProfile4"
