--- a/app/src/main/res/layout/fragment_createroom.xml
+++ b/app/src/main/res/layout/fragment_createroom.xml
@@ -14,14 +14,14 @@
         <ImageView
             android:id="@+id/iv_logo_top"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="10dp"
+            android:layout_height="70dp"
+            android:background="@color/colorWhite"
             android:src="@drawable/logo_top" />
 
         <LinearLayout
             android:id="@+id/layout_gradient"
             android:layout_width="match_parent"
-            android:layout_height="10dp"
+            android:layout_height="5dp"
             android:layout_below="@id/iv_logo_top"
             android:background="@drawable/custom_gradient"
             android:orientation="vertical" />
