--- a/app/src/main/res/drawable/custom_border.xml
+++ b/app/src/main/res/drawable/custom_border.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <corners android:radius="15dp"/>
-    <padding android:left="15dp" android:right="15dp" android:top="7dp" android:bottom="7dp"/>
-    <stroke android:width="1dp" android:color="@color/colorGray" />
-    <solid android:color="@color/colorWhite" />
+
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+    <corners android:radius="10dp"/>
+    <padding android:left="5dp" android:right="5dp" android:top="5dp" android:bottom="5dp"/>
+    <stroke android:width="1dp" android:color="#CCCCCC"/>
 </shape>
