--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -49,7 +49,7 @@
 
     <Button
         android:id="@+id/btn_changeImage"
-        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_userName"
@@ -59,6 +59,7 @@
 
     <Button
         android:id="@+id/btn_changePw"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/btn_changeImage"
@@ -67,6 +68,7 @@
 
     <Button
         android:id="@+id/btn_inquire"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/btn_changePw"
@@ -75,6 +77,7 @@
 
     <Button
         android:id="@+id/btn_about"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/btn_inquire"
@@ -83,6 +86,7 @@
 
     <Button
         android:id="@+id/btn_signOut"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/btn_about"
